--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "^3.1.0",
+    "jsdom": "^15.2.1",
+    "jsdom-global": "^3.0.2",
     "mocha": "^6.2.2",
     "nyc": "^15.0.0",
     "prettier": "^1.19.1",
