--- a/package.json
+++ b/package.json
@@ -62,6 +62,9 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-react": "^7.7.4",
     "eslint-config-airbnb": "^18.0.1",
     "node-fetch": "^2.6.0",
     "spotify-wrapper": "^2.1.0"
